force-app/main/default/objects/Event_Speaker__c/Event_Speaker__c.object-meta.xml
<CustomObject>
    <description>Master Detail with both objects: Event and Speaker</description>
    <label>Event-Speaker</label>
    <nameField>
        <label>Event-Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event-Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>