force-app/main/default/objects/Event_Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Mater-Detail with the Event object.</description>
    <inlineHelpText>Mater-Detail with the Event object.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event-Speakers</relationshipLabel>
    <relationshipName>Event_Speakers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>