force-app/main/default/objects/Event_Speaker__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <formula>Event__r.Name__c</formula>
    <label>Event</label>
    <type>Text</type>
</CustomField>