force-app/main/default/objects/Event_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <description>Mater-Detail with the Speaker object.</description>
    <inlineHelpText>Mater-Detail with the Speaker object.</inlineHelpText>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Event-Speakers</relationshipLabel>
    <relationshipName>Event_Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>