force-app/main/default/objects/Event_Speaker__c/validationRules/Speaker_EndDate_Live.validationRule-meta.xml
<ValidationRule>
    <fullName>Speaker_EndDate_Live</fullName>
    <active>true</active>
    <description>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</description>
    <errorConditionFormula>AND (DATEVALUE(Event__r.End__c) &lt;= TODAY() , Event__r.Live__c = false)</errorConditionFormula>
    <errorMessage>Speaker can only be associated with the Event whose End Date is in future &amp; Event Live Checkbox is checked</errorMessage>
</ValidationRule>