force-app/main/default/objects/Event_Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Speaker__c</columns>
    <columns>EventName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>